@@ -1,3 +1,6 @@
+Jun 15, 2023
+  agr gff3: updated assembly names for rat and human in gff3 headers
+
 Jun 09, 2023
   ontologies, genes, qtls, markers: JBrowse2 files for rn7
 
